# snd-calibrator

./: CMakeLists.txt
addons/: clone_addons.sh
src/: calibration_server.cpp  calibration_server.h  color_tracker.cpp  color_tracker.h  gc_depth.cpp  gc_depth.h  gc_rgb.cpp  gc_rgb.h  main.cpp  ofApp.cpp  ofApp.h  projector.cpp
